Added: scaling, normalizing, scaling between two numbers, and ordinalize

--- a/README.rdoc
+++ b/README.rdoc
@@ -104,7 +104,54 @@ Another interesting feature is the default block getter and setter.  Sometimes I
   # => [2,4,6]
   a.std
   # => 2.0 instead of 1.0
-    
+  
+== Scaling
+
+There are a few new features for scaling data:
+
+  >> a = [1,2,3]
+  => [1, 2, 3]
+  >> a.scale(2)
+  => [2, 4, 6]
+  >> a
+  => [1, 2, 3]
+  >> a.scale!(2)
+  => [2, 4, 6]
+  >> a
+  => [2, 4, 6]
+  >> a.scale {|e| e - 1}
+  => [1, 3, 5]
+  >> a
+  => [2, 4, 6]
+  >> a.scale! {|e| e - 1}
+  => [1, 3, 5]
+  >> a                   
+  => [1, 3, 5]
+  >> a.scale_between(3,4)
+  => [3.0, 3.5, 4.0]
+  >> a
+  => [1, 3, 5]
+  >> a.scale_between!(3,4)
+  => [3.0, 3.5, 4.0]
+  >> a
+  => [3.0, 3.5, 4.0]
+  >> a = [1,2,3]
+  => [1, 2, 3]
+  >> a.normalize
+  => [0.166666666666667, 0.333333333333333, 0.5]
+  >> a      
+  => [1, 2, 3]
+  >> a.normalize!
+  => [0.166666666666667, 0.333333333333333, 0.5]
+  >> a
+  => [0.166666666666667, 0.333333333333333, 0.5]
+
+Basically:
+
+* scale can scale by a number or with a block.  The block is a transformation for a single element.
+* scale_between sets the minimum and maximum values, and keeps each value proportionate to each other.
+* normalize calculates the percentage of an element to the whole.
+
 == Categories
 
 Once I started using this gem with my distribution table classes, I needed to have flexible categories on an enumerable.  What that looks like is:
